--- a/desafio_kis/src/app/app.component.html
+++ b/desafio_kis/src/app/app.component.html
@@ -1,31 +1,50 @@
+<h1>Visualización de datos</h1>
 <div class="container">
-  <h2>Datos de la API</h2>
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Nombre</th>
-        <th>Apellido</th>
-        <th>Rut</th>
-        <th>Sexo</th>
-        <th>Teléfono</th>
-        <th>Dirección</th>
-        <th>Fecha de Nacimiento</th>
-        <th>Correo Electrónico</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of data">
-        <td>{{ item.ID }}</td>
-        <td>{{ item.Nombre }}</td>
-        <td>{{ item.Apellido }}</td>
-        <td>{{ item.Rut }}</td>
-        <td>{{ item.Sexo }}</td>
-        <td>{{ item.Telefono }}</td>
-        <td>{{ item.Direccion }}</td>
-        <td>{{ item.FechaNacimiento }}</td>
-        <td>{{ item.CorreoElectronico }}</td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="row">
+    <div class="col">
+      <div class="card">
+        <div class="card-header">
+        <h2>Listado Actual de personas</h2>
+        </div> 
+          <div class="card-body">
+                          <div class="table-responsive">
+                            <table class="table table-striped">
+                              <thead>
+                                <tr>
+                                  <th>ID</th>
+                                  <th>Nombre</th>
+                                  <th>Apellido</th>
+                                  <th>Rut</th>
+                                  <th>Sexo</th>
+                                  <th>Teléfono</th>
+                                  <th>Dirección</th>
+                                  <th>Fecha de Nacimiento</th>
+                                  <th>Correo Electrónico</th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr *ngFor="let item of data">
+                                  <td>{{ item.ID }}</td>
+                                  <td>{{ item.Nombre }}</td>
+                                  <td>{{ item.Apellido }}</td>
+                                  <td>{{ item.Rut }}</td>
+                                  <td>{{ item.Sexo }}</td>
+                                  <td>{{ item.Telefono }}</td>
+                                  <td>{{ item.Direccion }}</td>
+                                  <td>{{ item.FechaNacimiento }}</td>
+                                  <td>{{ item.CorreoElectronico }}</td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </div>
+           </div>
+       </div>
+    </div>
+  </div>
 </div>
+
+<app-formulario></app-formulario>
+<br><br>
+<app-edit></app-edit>
+<br><br>
+<app-remove></app-remove>
