--- a/desafio_kis/src/app/app.component.html
+++ b/desafio_kis/src/app/app.component.html
@@ -6,30 +6,25 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- Agrega los estilos de Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    /* Estilos adicionales personalizados */
-    .card {
-      margin-bottom: 20px;
-    }
-  </style>
+ 
 </head>
 <body>
   <div class="container">
     <h1>Visualización de datos</h1>
 
-    <!-- Botones para abrir los modales de cada componente -->
+    
     <div class="row">
-      <div class="col-md-6">
-        <button type="button" class="btn btn-primary btn-lg btn-block" data-bs-toggle="modal" data-bs-target="#editModal" >Editar Componente</button>
-      </div>
-      <div class="col-md-6">
-        <button type="button" class="btn btn-primary btn-lg btn-block" data-bs-toggle="modal" data-bs-target="#createModal" >Crear Componente</button>
+      <div class="col-md-4">
+        <button type="button" class="btn btn-primary btn-lg btn-block" data-bs-toggle="modal" data-bs-target="#editModal" >Editar Persona</button>
+    </div>
+
+    <div class="col-md-4">
+        <button type="button" class="btn btn-primary btn-lg btn-block" data-bs-toggle="modal" data-bs-target="#createModal" >Crear Persona</button>
       </div>
     </div>
 
-    <!-- Modal de EditComponent -->
+    <!-- Modales componentes -->
     <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -47,7 +42,7 @@
       </div>
     </div>
 
-    <!-- Modal de CreateComponent -->
+  
     <div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -69,9 +64,9 @@
     <div class="row">
       <div class="col">
         <div class="card">
-          <div class="card-header">
-            <h2>Listado Actual de personas</h2>
-          </div> 
+              <div class="card-header">
+                <h2>Listado Actual de personas</h2>
+              </div> 
           <div class="card-body">
             <div class="table-responsive">
               <table class="table table-striped">
@@ -102,7 +97,7 @@
                     <td>{{ item.CorreoElectronico }}</td>
                     <div>
                       <button type="button" class="btn btn-primary btn-lg btn-block" data-bs-toggle="modal" data-bs-target="#removeModal" (click)="confirmarBorrado(item.ID)">Borrar </button>
-                    </div>"
+                    </div>
                   </tr>
                 </tbody>
               </table>
@@ -115,31 +110,24 @@
 
 
 
-<<!-- Modal de confirmación de borrado -->
-<div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="confirmDeleteModalLabel">Confirmar Borrado</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+<!-- Modal de confirmación de borrado -->
+      <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="confirmDeleteModalLabel">Confirmar Borrado</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              ¿Estás seguro de que deseas borrar esta persona?
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+              <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="borrarPersona()">Borrar</button>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="modal-body">
-        ¿Estás seguro de que deseas borrar esta persona?
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="borrarPersona()">Borrar</button>
-      </div>
-    </div>
   </div>
-</div>
-
-   </div>
-  
-
-
-  <!-- Scripts de Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
