ultimo commit visual aplicacion al 90%

--- a/desafio_kis/src/app/app.component.css
+++ b/desafio_kis/src/app/app.component.css
@@ -6,7 +6,11 @@
   
       /* Estilo de los botones */
       .btn-custom {
-        margin-top: 20px;
+        margin-top: 15px;
+      }
+
+      .custom-btn {
+        min-width: 200px; /* Tamaño mínimo */
       }
   
       /* Estilo de la tabla */
