--- a/desafio_kis/src/app/app.component.html
+++ b/desafio_kis/src/app/app.component.html
@@ -9,34 +9,24 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
  
 </head>
+<app-header></app-header>
 <body>
   <div class="container">
-    <h1>Visualización de datos</h1>
-
-    
-    <div class="row">
-      <div class="col-md-4">
-        <button type="button" class="btn btn-primary btn-lg btn-block" data-bs-toggle="modal" data-bs-target="#editModal" >Editar Persona</button>
-    </div>
-
-    <div class="col-md-4">
-        <button type="button" class="btn btn-primary btn-lg btn-block" data-bs-toggle="modal" data-bs-target="#createModal" >Crear Persona</button>
-      </div>
-    </div>
+    <h1>Grilla Visualización de datos</h1>
 
     <!-- Modales componentes -->
     <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="editModalLabel">Edit Component</h5>
+            <h5 class="modal-title" id="editModalLabel">Componente para editar</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="actualizarTabla()"></button>
           </div>
           <div class="modal-body">
             <app-edit></app-edit>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary" (click)="actualizarTabla()">Aplicar Cambios</button>
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="actualizarTabla()">Aplicar Cambios</button>
           </div>
         </div>
       </div>
@@ -47,7 +37,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="createModalLabel">Create Component</h5>
+            <h5 class="modal-title" id="createModalLabel">Componente para Crear nueva persona</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="actualizarTabla()"></button>
           </div>
           <div class="modal-body">
@@ -96,7 +86,9 @@
                     <td>{{ item.FechaNacimiento }}</td>
                     <td>{{ item.CorreoElectronico }}</td>
                     <div>
-                      <button type="button" class="btn btn-primary btn-lg btn-block" data-bs-toggle="modal" data-bs-target="#removeModal" (click)="confirmarBorrado(item.ID)">Borrar </button>
+                      <button type="button" class="btn btn-danger btn-lg btn-block" data-bs-toggle="modal" data-bs-target="#removeModal" (click)="confirmarBorrado(item.ID)">
+                        <i class="bi bi-trash"></i> <!-- Icono de papelera de Bootstrap -->
+                      </button>
                     </div>
                   </tr>
                 </tbody>
@@ -104,8 +96,7 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
+    
   
 
 
@@ -128,6 +119,25 @@
           </div>
         </div>
       </div>
+  
+<br>
+<br>
+
+        <div class="col-md-6">
+          <button type="button" class="btn btn-primary btn-lg btn-block mb-3" data-bs-toggle="modal" data-bs-target="#editModal">
+            <i class="bi bi-pencil"></i> <!-- Icono de lápiz de Bootstrap -->
+            Editar Elemento
+          </button>
+        </div>
+        <div class="col-md-6">
+          <button type="button" class="btn btn-primary btn-lg btn-block mb-3" data-bs-toggle="modal" data-bs-target="#createModal">
+            <i class="bi bi-plus"></i> <!-- Icono de más de Bootstrap -->
+            Crear Elemento 
+          </button>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
+<app-footer></app-footer>
 </html>
