aplicacion para presentar

--- a/desafio_kis/src/app/edit/edit.component.css
+++ b/desafio_kis/src/app/edit/edit.component.css
@@ -45,7 +45,8 @@ form {
 
 
   .selected {
-    background-color: lightblue; /* Cambia el color de fondo al seleccionar */
+    background-color: lightblue;
+     /* Cambia el color de fondo al seleccionar */
   }
   
   .check {
